# AliceAutoware

./: CMakeLists.txt  README.md  generate_repo.py
.github/workflows/: ci.yml
apps/: mad_batch_eval.cpp  mad_demo.cpp  mad_visualizer.cpp
configs/generated_regression_suite/: generated_case_0000.json  generated_case_0001.json  generated_case_0002.json  generated_case_0003.json  generated_case_0004.json  generated_case_0005.json  generated_case_0006.json  generated_case_0007.json  generated_case_0008.json  generated_case_0009.json  generated_case_0010.json  generated_case_0011.json  generated_case_0012.json  generated_case_0013.json  generated_case_0014.json  generated_case_0015.json  generated_case_0016.json  generated_case_0017.json  generated_case_0018.json  generated_case_0019.json  generated_case_0020.json  generated_case_0021.json  generated_case_0022.json  generated_case_0023.json  generated_case_0024.json  generated_case_0025.json  generated_case_0026.json  generated_case_0027.json  generated_case_0028.json  generated_case_0029.json  generated_case_0030.json  generated_case_0031.json  generated_case_0032.json  generated_case_0033.json  generated_case_0034.json  generated_case_0035.json  generated_case_0036.json  generated_case_0037.json  generated_case_0038.json  generated_case_0039.json  (+6160 more)
configs/scenarios/: README.md  aggressive_cut_in.csv  boxed_in_following.csv  cooperative_lane_change.csv  corridor_blocked_recovery.csv  cut_in_event.csv  double_cut_in.csv  lead_vehicle_brake.csv  multi_interaction_weave.csv  rear_approach_pressure.csv  stop_and_go_wave.csv  sudden_lane_blockage.csv  truck_cut_in_brake.csv
docs/architecture/: 01_system_architecture.md  02_open_source_survey.md  03_momenta_role_mapping.md  04_safety_and_scenario_authoring.md  05_runtime_observability.md  06_interop_bridges.md  07_risk_and_task_pipeline.md  08_validation_and_tests.md  09_advanced_prediction_and_safety.md  10_lane_corridor_rss_and_diagnostics.md  11_corridor_and_fallback.md  module_dependency.puml  module_dependency_v10.puml  module_dependency_v11.puml  module_dependency_v4.puml  module_dependency_v5.puml  module_dependency_v6.puml  module_dependency_v7.puml  module_dependency_v8.puml  module_dependency_v9.puml  module_inventory.json  runtime_sequence.md
scripts/: build_linux.sh  build_windows.bat  build_windows_stable_final.bat  diagnose_windows_env.bat  package_linux.sh  run_batch_eval.sh  run_batch_eval_windows.bat  run_demo.sh  run_demo_windows.bat  run_visualizer.sh  run_visualizer_windows.bat
src/control/: controller.cpp  feedforward_controller.cpp  gain_scheduler.cpp  lateral_controller.cpp  longitudinal_controller.cpp
src/localization/: localization_filter.cpp
src/map/: lane_corridor_builder.cpp  lane_map.cpp  route_planner.cpp  semantic_map.cpp
src/perception/: fusion_engine.cpp  lane_occupancy_analyzer.cpp  occupancy_grid.cpp  sensor_model.cpp  track_manager.cpp
src/planning/: behavior_fsm.cpp  behavior_planner.cpp  behavior_tree.cpp  corridor_cost_evaluator.cpp  gap_acceptance_evaluator.cpp  lane_change_manager.cpp  lane_sequence_planner.cpp  speed_planner.cpp  task_tree.cpp  trajectory_planner.cpp  trajectory_stitcher.cpp
src/prediction/: constant_velocity_predictor.cpp  intention_predictor.cpp  interaction_predictor.cpp  joint_interaction_predictor.cpp  multi_agent_behavior_predictor.cpp  risk_object_ranker.cpp  scene_risk_assessor.cpp  trajectory_hypothesis_generator.cpp
src/runtime/: autonomy_stack.cpp  decision_trace_writer.cpp  diagnostics_monitor.cpp  evaluator.cpp  event_logger.cpp  fallback_manager.cpp  hypothesis_trace_writer.cpp  interaction_trace_writer.cpp  mission_manager.cpp  report_writer.cpp  risk_trace_writer.cpp
tests/: test_control.cpp  test_control_advanced.cpp  test_corridor.cpp  test_fallback.cpp  test_framework.cpp  test_framework.hpp  test_interaction.cpp  test_main.cpp  test_map.cpp  test_planning.cpp  test_prediction.cpp  test_prediction_advanced.cpp  test_runtime.cpp  test_runtime_diagnostics.cpp  test_safety.cpp  test_safety_rss.cpp  test_scenarios.cpp
tools/: analyze_bridge.py  batch_report.py  check_architecture_sync.py  evaluate_run.py  regression_matrix.py  render_replay.py  summarize_decision_trace.py  summarize_events.py  summarize_hypothesis_trace.py  summarize_interaction_trace.py  summarize_risk_trace.py  summarize_task_bridge.py
(+76 files in other folders)
